--- a/src/cv.tex
+++ b/src/cv.tex
@@ -12,7 +12,7 @@
 
 \section{<%=contact%>}
 
-<%0..3.each do |i| %>
+<%(0..3).each do |i| %>
 	<%=contact_address[i]%> \hfill
 	{\tt <%=contact_other[i]%>}\\
 <%end%>
